:construction: attempts to solve the ssh issue on beast

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,21 +16,22 @@ default :
     - OMP_NUM_THREADS=1
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - echo "Host gwceci" >> ~/.ssh/config
+    - echo "Host gwceci" > ~/.ssh/config
     - echo "  HostName gwceci.cism.ucl.ac.be" >> ~/.ssh/config
     - echo "  User $SSHUSER" >> ~/.ssh/config
-    - echo " " >> ~/.ssh/config
     - echo "Host lm3" >> ~/.ssh/config
     - echo "  ProxyCommand ssh gwceci -W %h:%p 2> /dev/null" >> ~/.ssh/config
     - echo "  User $SSHUSER" >> ~/.ssh/config
     # - echo "Host lm3" > ~/.ssh/config
     # - echo "  ProxyJump $SSHUSER@gwceci.cism.ucl.ac.be" >> ~/.ssh/config
-    # - echo "  HostName lemaitre3.cism.ucl.ac.be"  >> ~/.ssh/config
+    - echo "  HostName lemaitre3.cism.ucl.ac.be"  >> ~/.ssh/config
     # - echo "  User $SSHUSER" >> ~/.ssh/config
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$SSHKEY")
-    - ssh-keyscan lm3 >> ~/.ssh/known_hosts
-    - ssh-keyscan gwceci >> ~/.ssh/known_hosts
+    # - ssh-keyscan gwceci.cism.ucl.ac.be >> ~/.ssh/known_hosts
+    # - ssh gwceci ssh-keyscan lm3 >> ~/.ssh/known_hosts
+    - echo $LM3KH >> ~/.ssh/known_hosts
+    - echo $GWKH >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
     - ssh-add -L
     - ssh -v lm3 touch coucou.text
