--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -28,7 +28,7 @@ compil lm3 :
     - tar -czf flups_src.tar.gz --exclude=flups_src.tar.gz * && du -sh flups_src.tar.gz
     # send the tar on LM3
     - scp -v flups_src.tar.gz lm3:${PATH2BIN}_${TAG}
-    - ssh -v lm3 mkdir flups && mv ${PATH2BIN}_${TAG}/flups_src.tar.gz ./flups && cd flups && tar -xvzf flups_src.tar.gz && mv * ${PATH2BIN}_${TAG}/
+    - ssh -v lm3 tar -xvzf {PATH2BIN}_${TAG}/flups_src.tar.gz -C {PATH2BIN}_${TAG}/
     - ssh -v lm3 ln -fs ${PATH2BIN}_${TAG}/make_arch/make.lm3_gtest ${PATH2BIN}_${TAG}/make_arch.local
     - echo -e "\e[0Ksection_start:`date +%s`:my_first_section[collapsed=true]\r\e[0KCompilation of Flups"
     - ssh lm3 ${PATH2BIN}_${TAG}/scripts/flups_auto_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh #make the executable, and test if the file was created
