:bug: fix a typo

--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -24,19 +24,21 @@ compil lm3 :
     - ssh lm3 mkdir -p ${PATH2BIN}_${TAG}
     - ssh lm3 chmod 700 ${PATH2BIN}_${TAG}
     # compress the whole current repo, more robust with scp
+    - echo -e "\e[0Ksection_start:`date +%s`:my_first_section[collapsed=true]\r\e[0KArchive and send the src on lm3"
     - tar -czf flups_src.tar.gz --exclude=flups_src.tar.gz * && du -sh flups_src.tar.gz
     # send the tar on LM3
     - scp flups_src.tar.gz lm3:${PATH2BIN}_${TAG}
     - ssh lm3 tar -xvzf ${PATH2BIN}_${TAG}/flups_src.tar.gz -C ${PATH2BIN}_${TAG}/
+    - echo -e "\e[0Ksection_end:`date +%s`:my_second_section\r\e[0K"
     - ssh lm3 ln -fs ${PATH2BIN}_${TAG}/make_arch/make.lm3_gtest ${PATH2BIN}_${TAG}/make_arch.local
-    - echo -e "\e[0Ksection_start:`date +%s`:my_first_section[collapsed=true]\r\e[0KCompilation of Flups"
+    - echo -e "\e[0Ksection_start:`date +%s`:my_second_section[collapsed=true]\r\e[0KCompilation of Flups"
     - ssh lm3 ${PATH2BIN}_${TAG}/scripts/flups_auto_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh #make the executable, and test if the file was created
-    - echo -e "\e[0Ksection_end:`date +%s`:my_first_section\r\e[0K"
+    - echo -e "\e[0Ksection_end:`date +%s`:my_second_section\r\e[0K"
     - scp lm3:${PATH2BIN}_${TAG}/lib/libflups_a2a.a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
     - scp lm3:${PATH2BIN}_${TAG}/lib/libflups_nb.a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
-    - echo -e "\e[0Ksection_start:`date +%s`:my_second_section[collapsed=true]\r\e[0KCompilation of Google tests"
+    - echo -e "\e[0Ksection_start:`date +%s`:my_third_section[collapsed=true]\r\e[0KCompilation of Google tests"
     - ssh lm3 ${PATH2BIN}_${TAG}/scripts/flups_gtest_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh
-    - echo -e "\e[0Ksection_end:`date +%s`:my_second_section\r\e[0K"
+    - echo -e "\e[0Ksection_end:`date +%s`:my_third_section\r\e[0K"
     - scp lm3:${PATH2BIN}_${TAG}/test/flups_test_a2a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
     - scp lm3:${PATH2BIN}_${TAG}/test/flups_test_nb . #we must download the EXE back to the test machine, so that the runner can archive
     - echo "Done with compilation."
@@ -56,7 +58,7 @@ run lm3:
   script:
     - ssh lm3 rm -f $PATH2RUN/*
     - ssh lm3 mkdir -p $PATH2RUN/
-    - scp flups_test_nb lm3:$PATH2RUN/node_centered_test/                           #sending the previously compiled exe back to lm3
+    - scp flups_test_nb lm3:$PATH2RUN/                                              #sending the previously compiled exe back to lm3
     - scp -r test/run/run_test.sh lm3:${PATH2RUN}/                                  #copy the slurm script from the runner
     - > 
       ssh lm3 "cd $PATH2RUN/ && 
