--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -88,6 +88,9 @@ check result lm3:
   #    start_in: 1 minutes
   
   artifacts: 
+    paths: 
+      - node_report.xml
+      - cell_report.xml
     reports:
         junit: 
           - node_report.xml
@@ -103,6 +106,8 @@ check result lm3:
     - if [[ ! $(ssh lm3 "grep 'Tests are over ' ${PATH2RUN}/NODE_*") ]]; then echo "The Node test did not execute till the end."; exit 1; fi
     - if [[ ! $(ssh lm3 "grep 'Tests are over ' ${PATH2RUN}/CELL_*") ]]; then echo "The Cell test did not execute till the end."; exit 1; fi
     - scp lm3:${PATH2RUN}/*.xml .
+    - test -f node_report.xml && grep -L "<failure" node_report.xml   # Check that there is no failed tests
+    - test -f cell_report.xml && grep -L "<failure" cell_report.xml   # Check that there is no failed tests
 
   retry:                              # Retry -- Relaunch the Job
     max: 2                            # Limited to 2 (because of gitlab)
