:construction: Changing the make architecture for the automatic compilation

--- a/test/Makefile
+++ b/test/Makefile
@@ -23,7 +23,7 @@
 
 ################################################################################
 # ARCH DEPENDENT VARIABLES
-ARCH_FILE ?= make_arch.local
+ARCH_FILE ?= make_arch/make.default
 include ../$(ARCH_FILE)
 
 ################################################################################
