:rotating_light: Update make system for the validation

--- a/samples/simpleTest/Makefile
+++ b/samples/simpleTest/Makefile
@@ -91,7 +91,7 @@ $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp
 	$(CXX) $(CXXFLAGS) $(OPTS) $(INC) $(DEF) -fPIC -MMD -c $< -o $@
 
 ################################################################################
-default: $(TARGET_EXE_MPI_AGGRESSIVE) $(TARGET_EXE_NB)
+default: $(TARGET_EXE_A2A) $(TARGET_EXE_NB)
 
 all: $(TARGET_EXE_A2A) $(TARGET_EXE_NB) $(TARGET_EXE_DPREC_A2A) $(TARGET_EXE_DPREC_NB)
 
