--- a/.gitlab-ci/flups-build.yml
+++ b/.gitlab-ci/flups-build.yml
@@ -44,20 +44,20 @@ compil comm:
     - cd ./samples/validation
     - make all -j4
 
-compil metis:
-  stage: build
-  artifacts: 
-    paths:
-      - ./samples/validation/flups_validation_nb
-      - ./samples/validation/flups_validation_a2a
-      - ./include/LGF_2d_sym_acc12_32.ker
-      - ./include/LGF_3d_sym_acc12_64.ker 
-    when: on_success
-  script:
-    - export ARCH_FILE=make_arch/make.docker_valid_metis
-    - make install -j4
-    - cd ./samples/validation
-    - make all -j2
+# compil metis:
+#   stage: build
+#   artifacts: 
+#     paths:
+#       - ./samples/validation/flups_validation_nb
+#       - ./samples/validation/flups_validation_a2a
+#       - ./include/LGF_2d_sym_acc12_32.ker
+#       - ./include/LGF_3d_sym_acc12_64.ker 
+#     when: on_success
+#   script:
+#     - export ARCH_FILE=make_arch/make.docker_valid_metis
+#     - make install -j4
+#     - cd ./samples/validation
+#     - make all -j2
 
 compil solve_advanced:
   stage: build
