:bug: :white_check_mark: remove the run_metis job as well

--- a/.gitlab-ci/flups-test.yml
+++ b/.gitlab-ci/flups-test.yml
@@ -284,24 +284,24 @@ run 2d 4:1:
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_333399_typeGreen=1.txt'))"
 
 
-run metis:
-  stage: test
-  rules:
-    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
-    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
-    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
-    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
-    - if: $CI_COMMIT_BRANCH == "metis"
-  needs: [compil metis]
-  dependencies: 
-    - compil metis
-  script:
-    - cd ./samples/validation/
-    - mkdir prof
-    - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_a2a -np 2 1 2 -res 16 16 16 -bc 4 4 4 4 4 4 
-    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_444444_typeGreen=0.txt'))"
-    - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_nb -np 2 2 1 -res 17 17 17 -bc 3 3 4 1 1 1 
-    - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
+# run metis:
+#   stage: test
+#   rules:
+#     - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+#     - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+#     - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+#     - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+#     - if: $CI_COMMIT_BRANCH == "metis"
+#   needs: [compil metis]
+#   dependencies: 
+#     - compil metis
+#   script:
+#     - cd ./samples/validation/
+#     - mkdir prof
+#     - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_a2a -np 2 1 2 -res 16 16 16 -bc 4 4 4 4 4 4 
+#     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_444444_typeGreen=0.txt'))"
+#     - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_nb -np 2 2 1 -res 17 17 17 -bc 3 3 4 1 1 1 
+#     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
 
 ################################################################################
 # NON BLOCKING
